kbo프로젝트 수정중

--- a/portfolio.html
+++ b/portfolio.html
@@ -280,7 +280,7 @@
             </svg>
           </div>
           <h3 class="contact-title">GitHub</h3>
-          <p class="contact-info">github.com/lotto-one</p>
+          <p class="contact-info">github.com/Lottone27</p>
         </a>
 
         <a href="https://lottone.tistory.com" target="_blank" rel="noreferrer noopener" class="contact-card">
