--- a/project-kbo.html
+++ b/project-kbo.html
@@ -62,17 +62,22 @@
         <main class="shell">
           <section id="project-detail" class="hero-section project-hero">
             <div class="hero-content">
-              <div class="hero-image">
-                <div class="hero-image-placeholder">
-                  <img src="./image/kbo/cover.png" alt="KBO 리그 통합 데이터 플랫폼 메인 화면">
-                  <span>KBO 메인 화면</span>
-                </div>
-              </div>
               <div class="hero-text">
                 <p class="hero-kicker">Project</p>
                 <div class="hero-title-row">
                   <h1 class="hero-name">KBO 리그 통합 데이터 플랫폼</h1>
                   <span class="hero-period">2024.05 ~ 2024.06</span>
+                </div>
+                <div class="ppt-slider" data-total="44" tabindex="0" aria-label="KBO 프로젝트 주요 화면 슬라이드">
+                  <div class="ppt-viewport">
+                    <div class="ppt-track"></div>
+                  </div>
+                  <div class="ppt-controls">
+                    <button type="button" class="ppt-btn ppt-prev" aria-label="이전 슬라이드">Prev</button>
+                    <div class="ppt-dots" aria-hidden="false"></div>
+                    <div class="ppt-counter" aria-live="polite"></div>
+                    <button type="button" class="ppt-btn ppt-next" aria-label="다음 슬라이드">Next</button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -89,24 +94,28 @@
               <h3 class="detail-subtitle">주요 기능</h3>
               <ol class="detail-steps">
                 <li>
-                  <h3>데이터 통합</h3>
-                  <p>실시간 경기/선수 데이터를 모아 핵심 지표를 한 화면에 제공</p>
+                  <h3>실시간 데이터 통합</h3>
+                  <p>KBO 경기 및 선수 데이터를 통합해 핵심 정보를 한 화면에 제공</p>
                 </li>
                 <li>
-                  <h3>컨텍스트 보강</h3>
-                  <p>야구장 위치 기반 날씨 정보와 매칭해 경기 몰입도 강화</p>
+                  <h3>날씨 연동 시각화</h3>
+                  <p>야구장 위치 기반 날씨 정보를 연동해 직관적인 시각화 제공</p>
                 </li>
                 <li>
                   <h3>뉴스 자동 수집</h3>
-                  <p>최신 KBO 뉴스를 자동 수집해 피드 형태로 업데이트</p>
+                  <p>최신 KBO 뉴스를 자동 수집해 뉴스 피드로 제공</p>
                 </li>
                 <li>
                   <h3>구단 인사이트</h3>
-                  <p>모기업 증권 정보를 차트/지표로 시각화해 비교 가능</p>
+                  <p>구단별 모기업 증권 정보를 차트·지표로 시각화</p>
                 </li>
                 <li>
                   <h3>커뮤니티</h3>
-                  <p>응원 게시판, 댓글, 필터링/신고로 사용자 참여 유도</p>
+                  <p>응원 게시판 커뮤니티 및 댓글/필터링/신고 시스템 제공</p>
+                </li>
+                <li>
+                  <h3>신뢰성 확보</h3>
+                  <p>데이터 출처·오류 모니터링·사용자 피드백 기반으로 신뢰성 강화</p>
                 </li>
               </ol>
             </div>
@@ -188,11 +197,6 @@
           <section id="screens" class="content-section detail-section">
             <h2 class="section-title">주요 화면</h2>
             <div class="section-content">
-              <div class="detail-gallery">
-                <img src="./image/kbo/screen-1.png" alt="KBO 플랫폼 화면 1">
-                <img src="./image/kbo/screen-2.png" alt="KBO 플랫폼 화면 2">
-                <img src="./image/kbo/screen-3.png" alt="KBO 플랫폼 화면 3">
-              </div>
               <div class="detail-media">
                 <img src="./image/kbo/crawling.gif" alt="크롤링 구조 변경 대응 시각화">
               </div>
@@ -237,5 +241,110 @@
       </div>
     </div>
   </div>
+
+  <script>
+    (() => {
+      const slider = document.querySelector('.ppt-slider');
+      if (!slider) return;
+
+      const total = Number(slider.dataset.total || 0);
+      const track = slider.querySelector('.ppt-track');
+      const dotsWrap = slider.querySelector('.ppt-dots');
+      const counter = slider.querySelector('.ppt-counter');
+      const prevButton = slider.querySelector('.ppt-prev');
+      const nextButton = slider.querySelector('.ppt-next');
+      let currentIndex = 0;
+
+      if (!track || !dotsWrap || total <= 0) return;
+
+      const createSlide = (index) => {
+        const slide = document.createElement('div');
+        slide.className = 'ppt-slide';
+        const img = document.createElement('img');
+        img.src = `./image/kbo/ppt/${index}.jpg`;
+        img.alt = `KBO 프로젝트 PPT 화면 ${index}`;
+        img.loading = 'lazy';
+        slide.appendChild(img);
+        return slide;
+      };
+
+      const createDot = (index) => {
+        const dot = document.createElement('button');
+        dot.type = 'button';
+        dot.className = 'ppt-dot';
+        dot.setAttribute('aria-label', `${index}번 슬라이드`);
+        dot.dataset.index = String(index - 1);
+        return dot;
+      };
+
+      for (let i = 1; i <= total; i += 1) {
+        track.appendChild(createSlide(i));
+        dotsWrap.appendChild(createDot(i));
+      }
+
+      const dots = Array.from(dotsWrap.querySelectorAll('.ppt-dot'));
+
+      const update = () => {
+        track.style.transform = `translateX(-${currentIndex * 100}%)`;
+        dots.forEach((dot, index) => {
+          dot.classList.toggle('active', index === currentIndex);
+          dot.setAttribute('aria-current', index === currentIndex ? 'true' : 'false');
+        });
+        if (counter) {
+          counter.textContent = `${currentIndex + 1} / ${total}`;
+        }
+      };
+
+      const goTo = (index) => {
+        currentIndex = (index + total) % total;
+        update();
+      };
+
+      const goNext = () => goTo(currentIndex + 1);
+      const goPrev = () => goTo(currentIndex - 1);
+
+      prevButton?.addEventListener('click', goPrev);
+      nextButton?.addEventListener('click', goNext);
+
+      dotsWrap.addEventListener('click', (event) => {
+        const target = event.target.closest('.ppt-dot');
+        if (!target) return;
+        const index = Number(target.dataset.index || '0');
+        goTo(index);
+      });
+
+      slider.addEventListener('keydown', (event) => {
+        if (event.key === 'ArrowRight') {
+          goNext();
+        } else if (event.key === 'ArrowLeft') {
+          goPrev();
+        }
+      });
+
+      let touchStartX = 0;
+      let touchActive = false;
+      slider.addEventListener('touchstart', (event) => {
+        if (!event.touches || event.touches.length === 0) return;
+        touchStartX = event.touches[0].clientX;
+        touchActive = true;
+      }, { passive: true });
+
+      slider.addEventListener('touchend', (event) => {
+        if (!touchActive || !event.changedTouches || event.changedTouches.length === 0) return;
+        const touchEndX = event.changedTouches[0].clientX;
+        const delta = touchEndX - touchStartX;
+        if (Math.abs(delta) > 40) {
+          if (delta < 0) {
+            goNext();
+          } else {
+            goPrev();
+          }
+        }
+        touchActive = false;
+      }, { passive: true });
+
+      update();
+    })();
+  </script>
 </body>
 </html>
