about 인트로 수정

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
           <article class="project-card" data-href="project-kbo.html">
             <div class="project-body">
             <h3 class="project-title">KBO 프로젝트</h3>
-            <p class="project-meta">2025 · 역할 / 스택</p>
+            <p class="project-meta">2024.05 ~ 2024.06</p>
             <p class="project-desc">동시 접속 1만, p95 200ms 이하 - 캐시/큐/락 전략, 주요 아키텍처 한 줄</p>
             <div class="project-tags">
               <span class="tag">Java</span>
